--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,23 @@
-language: java
-before_script: 
-- git update-index --chmod=+x gradlew
+language: android
 
+jdk:
+  - oraclejdk8
+
+notifications:
+  email: false
+
+sudo: false
+
+android:
+  components:
+    - tools
+    - build-tools-25.0.2
+    - android-25
+    - extra-android-m2repository
+    - extra-android-support
+
+before_install:
+ - chmod +x gradlew
+
+script:
+  - ./gradlew assembleRelease
