--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ android:
 before_install:
  - chmod +x gradlew
 
+
 script:
+    - echo "Travis branch is $TRAVIS_BRANCH"
+    - echo "Travis branch is in pull request $TRAVIS_PULL+REQUEST"
+    - mvn clean install -P 'guice'
   - ./gradlew assembleRelease --stacktrace
   - ./gradlew build connectedCheck
