--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,4 +1,4 @@
-version: v1.0
+version: v2.0
 name: Vanir-android
 agent:
   machine:
@@ -12,3 +12,17 @@ blocks:
           commands:
             - java --version
             - mvn -v
+                      # Checkout code from Git repository. This step is mandatory if the
+          # job is to work with your code.
+          - checkout
+
+            # Restore dependencies from cache, command won't fail if it's
+            # missing.
+            # More on caching: https://docs.semaphoreci.com/article/54-toolbox-reference#cache
+          - cache restore
+
+          - mvn -q package jmeter:configure -Dmaven.test.skip=true
+
+            # Store the latest version of dependencies in cache,
+            # to be used in next blocks and future workflows:
+          - cache store
